--- a/templates/index.html
+++ b/templates/index.html
@@ -5,38 +5,47 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Classificador de Emails - AutoU</title>
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
-<body class="bg-gray-100">
-  <div class="header">
-    <h1 class="text-2xl font-bold text-center text-blue-600">Classificador de Emails</h1>
+<body class="bg-gray-100 flex items-center justify-center min-h-screen">
+  <div class="text-center m-10 p-10">
     
-    <br>
-    <div class="container">
-      <form class="space-y-4">
-        <div class="form-group">
-          <input type="text" name="email" placeholder="Digite o email">
-        </div>
-        <div class="form-group">
-          <textarea name="" id="" placeholder="Escreva o email"></textarea>
-        </div>
-        <div class="form-group">
-
-        </div>
-        <div class="form-group">
-
-        </div>
-        <div class="form-group">
-
-        </div>
-        <div class="form-group">
-          <button type="submit">Enviar</button>
-        </div>
-        <div class="footer">
-          <p>Classifique os emails em SPAM ou HAM</p>
-        </div>
-      </form>
-    </div>
+    <h1 class="text-2xl font-semibold mb-4">Classificador de Emails</h1>
+   
+    <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 space-y-4">
+      <!-- Upload de arquivos -->
+      <div>
+        <input type="file" class="w-full border rounded py-2 px-4" id="file_input" type="file">
+      </div>
+      <!-- Descrição de arquivos -->
+      <div class="form-group">
+        <label>Endereço de email:</label>
+        <input
+          class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
+          type="text" placeholder="Digite o email">
+      </div>
+      <br>
+      <div class="form-group">
+        <label>Destinatário:</label>
+        <input
+          class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
+          type="text" type="text" placeholder="Digite o email">
+      </div>
+      <br>
+      <div class="form-group">
+        <label>Descrição:</label>
+        <textarea
+          class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
+          type="text" placeholder="Descreva as informações do email"></textarea>
+      </div>
+      <br>
+      <div>
+        <button
+          class="shadow bg-purple-500 hover:bg-purple-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+          type="button">Enviar</button>
+      </div>
+    </form>
   </div>
 </body>
 
