--- a/templates/index.html
+++ b/templates/index.html
@@ -4,49 +4,65 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Classificador de Emails - AutoU</title>
+  <title>Classificador de Emails com IA - AutoU</title>
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
-  <div class="text-center m-10 p-10">
-    
-    <h1 class="text-2xl font-semibold mb-4">Classificador de Emails</h1>
-   
-    <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 space-y-4">
-      <!-- Upload de arquivos -->
-      <div>
-        <input type="file" class="w-full border rounded py-2 px-4" id="file_input" type="file">
-      </div>
+<body class="bg-gray-400 flex items-center justify-center min-h-screen">
+  <div class="bg-white shadow-lg rounded-2xl p-10 m-10 w-full max-w-lg">
+    <h1 class="text-2xl font-semibold text-purple-500 text-center mb-4">Classificador de Emails</h1>
+    <form id="formId" class="space-y-4" method="post">
       <!-- Descrição de arquivos -->
-      <div class="form-group">
-        <label>Endereço de email:</label>
-        <input
-          class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
+      <div>
+        <label for="remetenteId" class="font-bold">Remetente:</label>
+        <input id="remetenteId"
+          class="bg-gray-200 appearance-none border border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
           type="text" placeholder="Digite o email">
       </div>
-      <br>
-      <div class="form-group">
-        <label>Destinatário:</label>
-        <input
-          class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
+      <div>
+        <label for="destinatarioId" class="font-bold">Destinatário:</label>
+        <input id="destinatarioId"
+          class="bg-gray-200 appearance-none border border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
           type="text" type="text" placeholder="Digite o email">
       </div>
-      <br>
-      <div class="form-group">
-        <label>Descrição:</label>
-        <textarea
-          class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
-          type="text" placeholder="Descreva as informações do email"></textarea>
+      <div>
+        <label for="descripitionId" class="font-bold">Descrição:</label>
+        <textarea id="descripitionId"
+          class="bg-gray-200 appearance-none border border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
+          placeholder="Descreva as informações do email" autofocus></textarea>
       </div>
-      <br>
+      <div id="suggestionsId" class="suggestions">
+        <p>Aguardando digitação da IA...</p>
+      </div>
+      <!-- Upload de arquivos -->
+      <div class="flex flex-col items-center justify-center pt-5 pb-6">
+        <label for="dropfileId"
+          class="flex flex-col items-center justify-center w-full h-64 border-2 border-gray-300 border-dashed rounded-lg cursor-pointer bg-gray-50">
+          <p class="mb-2 text-sm">
+            <span class="font-semibold">Clique para selecionar</span> ou arraste o arquivo aqui
+          </p>
+          <p class="text-xs">(.txt ou .pdf)</p>
+      </div>
+      <input id="dropfileId" type="file" class="hidden" />
+      </label>
       <div>
         <button
           class="shadow bg-purple-500 hover:bg-purple-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-          type="button">Enviar</button>
+          type="button">Enviar Email</button>
       </div>
     </form>
   </div>
+
+<script>
+  const emailTextarea = document.getElementById('descripitionId');
+  const suggestions = document.getElementById('suggestions');
+   
+  // Função para gerar sugestões
+  
+
+
+</script>
+
 </body>
 
 </html>
